syntax = "proto3";
package api;

service DeviceService {
  rpc Register (stream RegisterRequest) returns (RegisterReply);

  rpc GetContainer(GetContainerRequest) returns (GetContainerReply);
}

message DeviceInfo {
  string  id = 1;
  int32 count = 2;
  bool health = 3;
}

message RegisterRequest {
  string node = 1;
  repeated DeviceInfo devices = 2;
}

message RegisterReply {
}

message GetContainerRequest {
  string uuid = 1;
}

message GetContainerReply {
  repeated string devList = 1;
  string podUID = 3;
  string ctrName = 4;
  string podNamespace = 5;
  string podName = 6;
}